{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 141,
  "lineage": "c3785f6f-d901-563c-566f-20b6be29f685",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "eni_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:network-interface/eni-03ac3f47ccc405c81",
            "attachment": [
              {
                "attachment_id": "ela-attach-0e159ddf546fa8e73",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1a",
            "description": "VPC Endpoint Interface vpce-0733c7bf4a40ed459",
            "id": "eni-03ac3f47ccc405c81",
            "interface_type": "vpc_endpoint",
            "mac_address": "0e:39:73:5e:ba:07",
            "owner_id": "783764574627",
            "private_ip": "10.0.3.181",
            "private_ips": [
              "10.0.3.181"
            ],
            "requester_id": "727180483921",
            "security_groups": [
              "sg-0d4b3651d2581204d"
            ],
            "subnet_id": "subnet-05b78ec321b5b63d6",
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:network-interface/eni-0f49bd4b281595f48",
            "attachment": [
              {
                "attachment_id": "ela-attach-0b852ce9ea6c7ce10",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1b",
            "description": "VPC Endpoint Interface vpce-0733c7bf4a40ed459",
            "id": "eni-0f49bd4b281595f48",
            "interface_type": "vpc_endpoint",
            "mac_address": "02:7d:1e:21:d7:3b",
            "owner_id": "783764574627",
            "private_ip": "10.0.5.139",
            "private_ips": [
              "10.0.5.139"
            ],
            "requester_id": "727180483921",
            "security_groups": [
              "sg-0d4b3651d2581204d"
            ],
            "subnet_id": "subnet-0e525345cdebdf82b",
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:internet-gateway/igw-089182cf4eefe8450",
            "id": "igw-089182cf4eefe8450",
            "owner_id": "783764574627",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:loadbalancer/app/test-lb-tf/a23acd8e247ea77f",
            "arn_suffix": "app/test-lb-tf/a23acd8e247ea77f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-lb-tf-899915563.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:783764574627:loadbalancer/app/test-lb-tf/a23acd8e247ea77f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d4b3651d2581204d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b78ec321b5b63d6"
              },
              {
                "subnet_id": "subnet-0e525345cdebdf82b"
              }
            ],
            "subnets": [
              "subnet-05b78ec321b5b63d6",
              "subnet-0e525345cdebdf82b"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:listener/app/test-lb-tf/a23acd8e247ea77f/3cf65f5dd52c7205",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:783764574627:listener/app/test-lb-tf/a23acd8e247ea77f/3cf65f5dd52c7205",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:loadbalancer/app/test-lb-tf/a23acd8e247ea77f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.ip-base-TG",
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc",
            "aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ip-base-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
            "arn_suffix": "targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "307,405",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:783764574627:loadbalancer/app/test-lb-tf/a23acd8e247ea77f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "s3-static-internal-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc",
            "aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8-20250117165533385700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
            "target_id": "10.0.3.181"
          },
          "dependencies": [
            "aws_lb_target_group.ip-base-TG",
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_network_interface.eni_info"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8-20250117165533461200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:783764574627:targetgroup/s3-static-internal-web-tg/d1161656f1a810a8",
            "target_id": "10.0.5.139"
          },
          "dependencies": [
            "aws_lb_target_group.ip-base-TG",
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc",
            "aws_vpc_endpoint.s3",
            "data.aws_network_interface.eni_info"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:route-table/rtb-050372c4888885ad2",
            "id": "rtb-050372c4888885ad2",
            "owner_id": "783764574627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:route-table/rtb-0745111aaf4cd6ab4",
            "id": "rtb-0745111aaf4cd6ab4",
            "owner_id": "783764574627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089182cf4eefe8450",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c7f679ad07e4ef",
            "route_table_id": "rtb-050372c4888885ad2",
            "subnet_id": "subnet-05b78ec321b5b63d6"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private-subnet-az1",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02be128f46f1d281b",
            "route_table_id": "rtb-050372c4888885ad2",
            "subnet_id": "subnet-0e525345cdebdf82b"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0c181f6548d7bbf",
            "route_table_id": "rtb-0745111aaf4cd6ab4",
            "subnet_id": "subnet-0b898e8f921b270e5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a891f8ccc673620",
            "route_table_id": "rtb-0745111aaf4cd6ab4",
            "subnet_id": "subnet-0dd8853905c3d1271"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:security-group/sg-0d4b3651d2581204d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4b3651d2581204d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "783764574627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "s3-static-internal-web-SG"
            },
            "tags_all": {
              "Name": "s3-static-internal-web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:subnet/subnet-05b78ec321b5b63d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b78ec321b5b63d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764574627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "private-subnet-az1",
              "Type": "private"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:subnet/subnet-0e525345cdebdf82b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e525345cdebdf82b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764574627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az2"
            },
            "tags_all": {
              "Name": "private-subnet-az2"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:subnet/subnet-0b898e8f921b270e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b898e8f921b270e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764574627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az1"
            },
            "tags_all": {
              "Name": "public-subnet-az1"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:subnet/subnet-0dd8853905c3d1271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd8853905c3d1271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764574627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az2"
            },
            "tags_all": {
              "Name": "public-subnet-az2"
            },
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private-static-web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:vpc/vpc-038ad08b5c6ad24ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0423e3766fc134736",
            "default_route_table_id": "rtb-089bb77be294f68b5",
            "default_security_group_id": "sg-0ff64fc5152f89e31",
            "dhcp_options_id": "dopt-03be8dbd43fae7480",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038ad08b5c6ad24ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089bb77be294f68b5",
            "owner_id": "783764574627",
            "tags": {
              "Name": "s3-private-static-web-vpc"
            },
            "tags_all": {
              "Name": "s3-private-static-web-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:vpc-endpoint/vpce-0733c7bf4a40ed459",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_entry": [
              {
                "dns_name": "*.vpce-0733c7bf4a40ed459-3gcll77f.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-0733c7bf4a40ed459-3gcll77f-us-east-1a.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-0733c7bf4a40ed459-3gcll77f-us-east-1b.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0733c7bf4a40ed459",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03ac3f47ccc405c81",
              "eni-0f49bd4b281595f48"
            ],
            "owner_id": "783764574627",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d4b3651d2581204d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.181",
                "subnet_id": "subnet-05b78ec321b5b63d6"
              },
              {
                "ipv4": "10.0.5.139",
                "subnet_id": "subnet-0e525345cdebdf82b"
              }
            ],
            "subnet_ids": [
              "subnet-05b78ec321b5b63d6",
              "subnet-0e525345cdebdf82b"
            ],
            "tags": {
              "Environment": "s3-static-web-internal-EP"
            },
            "tags_all": {
              "Environment": "s3-static-web-internal-EP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-038ad08b5c6ad24ef"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.private-subnet-az2",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:security-group-rule/sgr-09b6312919dab4e94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09b6312919dab4e94",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d4b3651d2581204d",
            "security_group_rule_id": "sgr-09b6312919dab4e94",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ipv4_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:security-group-rule/sgr-0174585c7b145808c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0174585c7b145808c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d4b3651d2581204d",
            "security_group_rule_id": "sgr-0174585c7b145808c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764574627:security-group-rule/sgr-0a0667c27a17cfe27",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a0667c27a17cfe27",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d4b3651d2581204d",
            "security_group_rule_id": "sgr-0a0667c27a17cfe27",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.private-static-web-vpc"
          ]
        }
      ]
    }
  ]
}